<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimens/fifty_dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appBar_text_book_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/invoices"
                android:textColor="@color/red"
                android:textSize="@dimens/twenty_sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimens/ten_dp"
        android:layout_marginEnd="@dimens/ten_dp"
        android:layout_marginTop="@dimens/ten_dp"
        app:cardCornerRadius="@dimens/eight_dp"
        app:cardElevation="@dimens/three_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimens/activity_horizontal_margin">

            <TextView
                android:id="@+id/invoiceCommonTitle"
                android:layout_width="@dimens/width_zero_dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimens/ten_dp"
                android:ellipsize="end"
                android:fontFamily="@font/fredoka"
                android:maxLines="1"
                android:text="@string/dakghar_niryat_kendra"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="@dimens/eighteen_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/orderIdTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimens/twenty_four_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/orderid"
                android:textColor="@color/black"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invoiceCommonTitle" />

            <TextView
                android:id="@+id/orderIdTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/orderIdNoTxt"
                android:textColor="@color/blue"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/orderIdTitle"
                app:layout_constraintStart_toEndOf="@+id/orderIdTitle"
                app:layout_constraintTop_toTopOf="@+id/orderIdTitle" />

            <TextView
                android:id="@+id/totalWeightTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:fontFamily="@font/fredoka"
                android:text="@string/total_weight"
                android:textColor="@color/black"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderIdTitle" />

            <TextView
                android:id="@+id/totalWeightTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/totalWeightDummyValue"
                android:textColor="@color/blue"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/totalWeightTitle"
                app:layout_constraintStart_toEndOf="@+id/totalWeightTitle"
                app:layout_constraintTop_toTopOf="@id/totalWeightTitle" />

            <TextView
                android:id="@+id/productTypeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:fontFamily="@font/fredoka"
                android:text="@string/product_type"
                android:textColor="@color/black"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/totalWeightTitle" />

            <TextView
                android:id="@+id/productTypeTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/orderIdNoTxt"
                android:textColor="@color/blue"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/productTypeTitle"
                app:layout_constraintStart_toEndOf="@id/productTypeTitle"
                app:layout_constraintTop_toTopOf="@id/productTypeTitle" />

            <TextView
                android:id="@+id/paymentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:fontFamily="@font/fredoka"
                android:text="@string/payment"
                android:textColor="@color/black"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/productTypeTitle" />

            <TextView
                android:id="@+id/paymentTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/paymentDummyValue"
                android:textColor="@color/blue"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/paymentTitle"
                app:layout_constraintStart_toEndOf="@+id/paymentTitle"
                app:layout_constraintTop_toTopOf="@+id/paymentTitle" />

            <ImageView
                android:id="@+id/barCodeImage"
                android:layout_width="match_parent"
                android:layout_height="@dimens/hundred_dp"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:contentDescription="@string/barcode_image"
                android:src="@drawable/barcode"
                app:layout_constraintTop_toBottomOf="@id/paymentTitle" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/downloadInv"
                android:layout_width="@dimens/two_hundred_dp"
                android:layout_height="@dimens/fifty_dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:layout_marginBottom="@dimens/ten_dp"
                android:background="@drawable/signinbutton_bg"
                android:fontFamily="@font/fredoka"
                android:text="@string/download"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimens/sixteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barCodeImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>