<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.otherscreen.fragments.PostageCalculation.PostageCalculation">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimens/fifty_dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/appBar_text_book_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/calculate_postage"
                android:textColor="@color/red"
                android:textSize="@dimens/twenty_sp"
                android:textStyle="bold" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <Spinner
        android:id="@+id/selectCountrySpinner"
        android:layout_width="match_parent"
        android:layout_height="@dimens/fifty_dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimens/activity_horizontal_margin"
        android:layout_marginTop="@dimens/activity_horizontal_margin"
        android:layout_marginEnd="@dimens/activity_horizontal_margin"
        android:background="@drawable/edit_text_bg"
        android:padding="@dimens/five_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <EditText
        android:id="@+id/grossWeightEdt"
        android:layout_width="match_parent"
        android:layout_height="@dimens/fifty_dp"
        android:layout_gravity="center"
        android:layout_marginStart="@dimens/activity_horizontal_margin"
        android:layout_marginTop="@dimens/activity_horizontal_margin"
        android:layout_marginEnd="@dimens/activity_horizontal_margin"
        android:autofillHints="number"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/gross_weight"
        android:inputType="number"
        android:paddingStart="@dimens/twelve_dp"
        android:paddingEnd="@dimens/twelve_dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectCountrySpinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculateBtn"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimens/twenty_five_dp"
        android:layout_marginEnd="@dimens/activity_horizontal_margin"
        android:background="@drawable/signinbutton_bg"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimens/sixteen_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grossWeightEdt" />

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimens/activity_horizontal_margin"
        android:layout_marginTop="@dimens/@dimens/twenty_four_dp"
        android:layout_marginEnd="@dimens/activity_horizontal_margin"
        android:elevation="@dimens/five_dp"
        android:visibility="gone"
        app:cardCornerRadius="@dimens/eight_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculateBtn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimens/activity_horizontal_margin">

            <TextView
                android:id="@+id/resultTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/fredoka"
                android:text="@string/result"
                android:textColor="@color/red"
                android:textSize="@dimens/eighteen_sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/selectedCountryTv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:fontFamily="@font/fredoka"
                android:text="@string/country_usa"
                android:textColor="@color/skyblue"
                android:textSize="@dimens/eighteen_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resultTitle" />

            <TextView
                android:id="@+id/grossWeightTv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/gross_weight_1500gms"
                android:textColor="@color/skyblue"
                android:textSize="@dimens/eighteen_sp"
                android:textStyle=""
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/selectedCountryTv" />

            <TextView
                android:id="@+id/gstTv"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/gst"
                android:textColor="@color/skyblue"
                android:textSize="@dimens/eighteen_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/grossWeightTv" />

            <TextView
                android:id="@+id/estimatedCost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimens/activity_horizontal_margin"
                android:layout_marginBottom="@dimens/ten_dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/estimated_cost_50_000"
                android:textAlignment="center"
                android:textColor="@color/skyblue"
                android:textSize="@dimens/eighteen_sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gstTv" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>